Fix: overflow prop wasn't actually useless

--- a/src/scss/partials/_account.scss
+++ b/src/scss/partials/_account.scss
@@ -112,6 +112,8 @@
 
     .user-content
     {
+        overflow: auto;
+
         .folders-container,
         .files-container
         {
